# RayTracingEngine

./: CMakeLists.txt  main.cpp
include/: Camera.h  Cube.h  Image.h  IntersectionPoint.h  Material.h  Matrix4x4.h  NormalizedRGB.h  RGB.h  Ray.h  Rotation.h  Scene.h  Sphere.h  Transformation.h  Vec3.h
include/Lighting/: AmbientLight.h  LightingModel.h  PhongLightingModel.h  PointLight.h
include/Rays/: DirectionRay.h  OriginRay.h  SegmentRay.h
src/: Camera.cpp  Cube.cpp  Image.cpp  IntersectionPoint.cpp  Material.cpp  Matrix4x4.cpp  NormalizedRGB.cpp  RGB.cpp  Ray.cpp  Rotation.cpp  Scene.cpp  Sphere.cpp  Transformation.cpp  Vec.cpp  Vec3.cpp
src/Lighting/: AmbientLight.cpp  LightingModel.cpp  PhongLightingModel.cpp  PointLight.cpp
src/Rays/: OriginRay.cpp  SegmentRay.cpp
tests/: CMakeLists.txt  TestPhongLightingModel.cpp  TestRGB.cpp  TestVec3.cpp
